edit GitHub Actions 3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ jobs:
         env:
           NAME: iPhone 16
         run: |
-          echo hey, $NAME > output/output.txt
+          echo hey, $NAME > output.txt
