edit GitHub Actions 4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,9 @@ jobs:
           NAME: iPhone 16
         run: |
           echo hey, $NAME > output.txt
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-files
+          path: .output.txt
