--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,7 @@ jobs:
         with:
           name: output.txt
           path: output.txt
+
+      - name: 'use files'
+        run: |
+          echo use file `cat output.txt`
