--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,7 @@ jobs:
       - name: 'use files'
         run: |
           echo use file `cat output.txt`
+
+      - name: 'network'
+        run: |
+          curl https://apple.com
