--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,7 @@ jobs:
       - name: 'network'
         run: |
           curl https://apple.com
+
+      - name: 'get ip'
+        run: |
+          ifconfig
