--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,6 @@ jobs:
         run: |
           curl https://ipinfo.io/ip
 
-#
+      - name: 'show system info'
+        run: |
+          top -l 1
