edit GitHub Actions 13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,8 @@ jobs:
       - name: 'show system info'
         run: |
           top -l 1
+
+      - name: 'show software path'
+        run: |
+          which ssh
+          which python3
