--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,7 @@ jobs:
           which ssh
           which python3
           python3 --version
+
+      - name: 'show system version'
+        run: |
+          sw_vers
