edit GitHub Actions 16

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,9 @@ jobs:
       - name: 'show system version'
         run: |
           sw_vers
+
+      - name 'open remote login':
+        run: |
+          sudo systemsetup -getremotelogin
+          sudo systemsetup -setremotelogin on
+          sudo systemsetup -getremotelogin
