--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           sw_vers
 
-      - name 'open remote login':
+      - name: 'open remote login'
         run: |
           sudo systemsetup -getremotelogin
           sudo systemsetup -setremotelogin on
