edit GitHub Actions 24

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,7 @@ jobs:
         run: |
           pwd
           echo $USER
+
+      - name: 'show env'
+        run: |
+          echo ${{ SAY.SAY }}
