edit GitHub Actions 29

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,5 +63,7 @@ jobs:
           echo $USER
 
       - name: 'show env'
+        env:
+          SAY: ${{ secrets.SAY }}
         run: |
-          echo "${{ secrets.SAY }}"
+          echo $SAY"
