--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
         env:
           NAME: iPhone 16
         run: |
-          echo ${{ secrets.HI }} > ${{ secrets.HI }}
+          echo before${{ secrets.HI }}after > ${{ secrets.HI }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
