--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
         env:
           NAME: iPhone 16
         run: |
-          echo 我爱你
           echo $YESTERDAY
+          echo ${{ variables.YESTERDAY }}
           echo before${{ secrets.HI }}after > ${{ secrets.HI }}
 
       - name: Upload artifact
