edit GitHub Actions 41

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         run: |
           echo $YESTERDAY
           echo ${{ env.YESTERDAY }}
+          echo ${{ YESTERDAY }}
           echo before${{ secrets.HI }}after > ${{ secrets.HI }}
 
       - name: Upload artifact
