--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
           NAME: iPhone 16
         run: |
           echo $YESTERDAY
-          echo ${{ env.YESTERDAY }}
+          echo ${{ vars.YESTERDAY }}
           echo before${{ secrets.HI }}after > ${{ secrets.HI }}
 
       - name: Upload artifact
